<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/swah_pee_logo_cd"
            app:layout_constraintBottom_toTopOf="@id/title_text_view"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_max="72dp"
            app:srcCompat="@drawable/ic_app_icon"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/search_characters_screen_title"
            android:textAppearance="@style/TextAppearance.App.H2"
            app:layout_constraintBottom_toTopOf="@id/search_input_layout"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input_layout"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.HintText"
            app:layout_constraintBottom_toTopOf="@id/search_results_recycler_view"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/title_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint_text"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.kryptkode.componentarchitecture.customviews.EmptyRecyclerView
            android:id="@+id/search_results_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/search_input_layout"
            tools:itemCount="5"
            tools:listitem="@layout/item_character" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/loading_group"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="progress_bar,loading_text_view" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/loading_text_view"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/search_input_layout"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/loading_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/searching_loading_indicator_text"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintWidth_max="256dp" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/search_hint_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="search_hint_image,search_hint_text_view" />

        <ImageView
            android:id="@+id/search_hint_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/search_icon_cd"
            app:layout_constraintBottom_toTopOf="@id/search_hint_text_view"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/search_input_layout"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_search_character" />

        <TextView
            android:id="@+id/search_hint_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_character_hint"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/search_hint_image"
            app:layout_constraintWidth_max="256dp" />


        <include layout="@layout/app_guidelines_ltr" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

