<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_films"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="96dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_films"
            android:drawablePadding="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center|start"
            android:textAppearance="@style/TextAppearance.App.ListPrimary"
            app:drawableStartCompat="@drawable/ic_film"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/films_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.rd.PageIndicatorView
            android:id="@+id/films_page_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/films_view_pager"
            app:piv_animationType="thinWorm"
            app:piv_autoVisibility="false"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_padding="12dp"
            app:piv_radius="5dp"
            app:piv_selectedColor="@color/colorPrimary"
            app:piv_unselectedColor="@color/colorGray" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/film_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="films_view_pager,films_page_indicator" />

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/error_img_cd"
            app:layout_constraintBottom_toTopOf="@id/loading_text_view"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_cloud" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintWidth_max="256dp"
            tools:text="An error occurred. Please retry" />


        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.App.Button.TextButton"
            android:text="@string/retry_btn_text"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/error_text_view" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/error_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="error_image,error_text_view,retry_button" />



        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/loading_text_view"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0.3"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/loading_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading_indicator_text"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintWidth_max="256dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/loading_group"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="progress_bar,loading_text_view" />


        <include layout="@layout/guidelines" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

